@@ -7,6 +7,7 @@
 * Fix sql formating of float strings
 * RecursiveMkdir() function report $dirname on error
 * Fix 'content-type' header returned by get_js.php script
+* Adding config option for globaly set cookie parameters
 
 Version 2.2.2
 ==============
